fixing weird spacing issue in crud

--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ ul.tag li a {
     color: #f37c6b;
 }
 
-#container{
-    
+#main-content {
+    padding-left: 10px;
 }
 
